# shader-loom

./: Cargo.toml  README.md  test.wgsl
src/: interpreter.rs  main.rs
src/interpreter/: mod.rs  scope.rs  value.rs
src/interpreter/expression/: binary.rs  mod.rs
src/interpreter/statement/: mod.rs
