[package]
name = "shader-loom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
bytemuck = "1.14.0"
clap = { version = "4.4.16", features = ["derive"] }
easy-repl = "0.2.1"
naga = { version = "0.14.2", features = ["wgsl-in"] }
rustc-hash = "1.1.0"
